--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Understand Service Workers</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-	<script src="/src/js/main.js"></script>
+	<script type="text/javascript">
+		if ('serviceWorker' in navigator) {
+			navigator.serviceWorker.register('/app-sw.js', {
+					scope: '/'
+				}).then(reg => console.log('SW registered!', reg))
+				.catch(err => console.log('Boo!', err));
+		}
+	</script>
+	<script src="/js/main.js"></script>
 </head>
+
 <body>
 	<header>
 		<span id="h-home">Home</span>
@@ -17,4 +27,5 @@
 	</header>
 	<section id="content-section"></section>
 </body>
+
 </html>
