--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<title>Understand Service Workers</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+	<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
 	<script type="text/javascript">
 		if ('serviceWorker' in navigator) {
 			navigator.serviceWorker.register('/app-sw.js', {
