--- a/index.html
+++ b/index.html
@@ -11,9 +11,29 @@
 		if ('serviceWorker' in navigator) {
 			navigator.serviceWorker.register('/app-sw.js', {
 					scope: '/'
-				}).then(reg => console.log('SW registered!', reg))
+				}).then(registration => console.log('SW registered!', registration))
 				.catch(err => console.log('Boo!', err));
 		}
+	</script>
+	<script type="text/javascript">
+		window.addEventListener('load', function() {
+			function updateOnlineStatus(event) {
+			  var live = navigator.onLine,
+			  	condition = live ? "Live" : "Currently offline"
+			  var ele = document.querySelector('.connection')
+
+			  ele.innerHTML = condition
+		  
+			  if(live) {
+				  document.body.classList.remove('offline')
+			  } else {
+				  document.body.classList.add('offline')
+			  }
+			}
+		  
+			window.addEventListener('online',  updateOnlineStatus);
+			window.addEventListener('offline', updateOnlineStatus);
+		  });
 	</script>
 	<script src="/js/main.js"></script>
 </head>
@@ -26,6 +46,7 @@
 		<span id="h-about">About Us</span>
 	</header>
 	<section id="content-section"></section>
+	<div class="connection"></div>
 </body>
 
 </html>
